docs(search): Phase 17 Gate 4 executed, H0 accepted, audited VALID
Why: the frozen Gate 4 SPRT ran on native Windows (RENEGADE), producing
0-13-1 over 14 scored games and an H0-accepted verdict (LLR -3.10 against
[-2.94, +2.94]); this run needed evidence preservation, a validity audit,
and a real post-run plumbing bug fixed before the result could be recorded.
What: preserved the actual sprt.ps1 log/PGN into the run's own evidence
directory with before/after SHA-256 confirming no alteration; audited
candidate/baseline identity, NEW/OLD configuration symmetry, the five
cancelled "unterminated" games (ordinary post-SPRT cancellation, not
failures), and all 14 scored games for engine/protocol failure signatures
(none found); classified the run VALID; fixed tools/p17-4-sprt.ps1's
post-processing bug (2>&1 doesn't carry sprt.ps1's Write-Host output, so
Get-Content failed on a file Tee-Object never populated -- switched to
*>&1 and added lookup/copy of sprt.ps1's own authoritative log/pgn);
recorded the H0 result and its precise interpretation (does not meet the
+50 Elo criterion; does not prove a -572 Elo regression) without revising
Gates 1-3.
Out of scope: no PVS/search source touched; no additional game played; no
SPRT rerun, bound change, or tuning; Phase 17 not merged.
Phase: 17 — pvs-experiment